force-app/hfs-backend/main/default/objects/hfs_CourseAttempt__c/hfs_CourseAttempt__c.object-meta.xml
<CustomObject>
    <description
  >One record per attempt at a course by a user - the durable, fully-reportable training history home (HFS-34). A Retake creates a new attempt row; nothing is ever overwritten or deleted.</description>
    <label>Course Attempt</label>
    <nameField>
        <displayFormat>ATT-{000000}</displayFormat>
        <label>Attempt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>