force-app/hfs-backend/main/default/objects/hfs_CourseAttempt__c/fields/hfs_AttemptNumber__c.field-meta.xml
<CustomField>
    <fullName>hfs_AttemptNumber__c</fullName>
    <description
  >Sequential attempt number within the parent progress record (1, 2, 3 ...). Set by the Domain layer.</description>
    <label>Attempt Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>