force-app/hfs-backend/main/default/objects/hfs_CourseAttempt__c/fields/hfs_CertificateUrl__c.field-meta.xml
<CustomField>
    <fullName>hfs_CertificateUrl__c</fullName>
    <description
  >The certificate issued for this specific attempt. Preserved permanently, even after a retake.</description>
    <label>Certificate URL</label>
    <type>Url</type>
</CustomField>