force-app/hfs-backend/main/default/objects/hfs_CourseAttempt__c/fields/hfs_CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>hfs_CompletionDate__c</fullName>
    <description
  >When this attempt was completed. Null until completed.</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>