force-app/hfs-backend/main/default/objects/hfs_CourseAttempt__c/fields/hfs_CourseProgress__c.field-meta.xml
<CustomField>
    <fullName>hfs_CourseProgress__c</fullName>
    <label>Course Progress</label>
    <referenceTo>hfs_CourseProgress__c</referenceTo>
    <relationshipLabel>Course Attempts</relationshipLabel>
    <relationshipName>Course_Attempts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>