force-app/hfs-backend/main/default/objects/hfs_CourseAttempt__c/fields/hfs_PercentComplete__c.field-meta.xml
<CustomField>
    <fullName>hfs_PercentComplete__c</fullName>
    <description
  >This attempt&apos;s final / last-known percentage.</description>
    <label>Percent Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>