force-app/hfs-backend/main/default/objects/hfs_CourseAttempt__c/fields/hfs_StartedDate__c.field-meta.xml
<CustomField>
    <fullName>hfs_StartedDate__c</fullName>
    <description
  >When this attempt began (Start / Retake). Set on creation by the Domain layer.</description>
    <label>Started Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>