force-app/hfs-backend/main/default/objects/hfs_CourseAttempt__c/fields/hfs_Status__c.field-meta.xml
<CustomField>
    <fullName>hfs_Status__c</fullName>
    <description
  >This attempt&apos;s status, independent of the parent progress record&apos;s live status.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>